--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
       <h1>Lab 02: About me.</h1>
     </header>
     <main>
-      <p>About Me.</p>
+      <p>About Me</p>
 
       <p>
         My name is Justin Agim. I was born and raise in Nashville, TN. My
