--- a/index2.html
+++ b/index2.html
@@ -23,6 +23,68 @@
         with friends and family. I am.
       </p>
     </main>
+    <p>
+      My top Ten NBA Basketball Players:
+    </p>
+    <ol>
+      <li>Lebron Jamess</li>
+      <li>Steph Curry</li>
+      <li>Kevin Durrant</li>
+      <li>Ja Morant</li>
+      <li>Russell Westbrook</li>
+      <li>Kyrie Irving</li>
+      <li>Anthony Davis</li>
+      <li>James Harden</li>
+      <li>Dame Lillard</li>
+      <li>Paul George</li>
+    </ol>
+
+    <p>
+       Education History
+    </p>
+
+    <ul>
+
+      <li>
+        Antioch High School
+        1999 - 2003
+        High School Diploma
+      </li>
+
+      <li>
+        Nashville State Communuity college
+        2004 - 2008
+        Undergraduate Studies
+        Associate's Degree
+        Business Management
+      </li>
+
+      <li>
+        Middle Tennessee State University
+        2009 - 2013
+        Undergraduate studies
+        Organzational Communication Skills
+      </li>
+    </ul>
+    <p>
+      Work Experience
+    </p>
+    <ul>
+      <li>
+        Jersey Mikes - Store Manager
+        2003 - 2004
+      </li>
+
+      <li>
+        Borders Books Inc - Material Handler
+        2007 - 2012
+      </li>
+
+      <li>
+        Nissan Inc. - Auto techinican
+        2012 - present
+      </li>
+    </ul>
     <script src="app.js"></script>
   </body>
 </html>
